--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="caption">
-              <h2>Ecommerce HTML Template</h2>
+              <h2>Mandles Candles - Homemade Aromatic Candles</h2>
               <div class="line-dec"></div>
               <p>We are so happy to have you here. Navigate your self in our eshop and discover all our fantastic products 
               <br><br>Please tell your friends about us.</p>
