--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://www.tooplate.com/view/2114-pixie
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span>Mandles</span>
+            <span>Mandles Candles</span>
           </div>
         </div>
       </div>
