--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ https://www.tooplate.com/view/2114-pixie
 
     <!-- Page Content -->
     <!-- Banner Starts Here -->
-    <div class="banner">
+    <!-- <div class="banner"> -->
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -82,7 +82,7 @@ https://www.tooplate.com/view/2114-pixie
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
     <!-- Banner Ends Here -->
     
     <!-- Footer Starts Here -->
