--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-    <title>Pixie Template - About Page</title>
+    <title>Mandles Candles - About Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@ https://www.tooplate.com/view/2114-pixie
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span>Suspendisse laoreet magna vel diam lobortis imperdiet</span>
+            <span>Mandles Candles</span>
           </div>
         </div>
       </div>
@@ -60,9 +60,6 @@ https://www.tooplate.com/view/2114-pixie
               <a class="nav-link" href="about.html">About Us</a>
               <span class="sr-only">(current)</span>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -86,16 +83,16 @@ https://www.tooplate.com/view/2114-pixie
           </div>
           <div class="col-md-6">
             <div class="right-content">
-              <h4>Phasellus vel interdum elit</h4>
-              <p><a href="https://www.pexels.com/photo/group-of-people-raising-right-hand-1059120/">Photo Credit</a> goes to Pexels website. Aliquam erat volutpat. Pellentesque fringilla, ligula consectetur cursus scelerisque, leo elit pellentesque sapien, et pharetra arcu elit vitae sem. Suspendisse erat dui, condimentum in mi ac, varius tempor sapien. Donec in justo sit amet ex aliquet maximus ac quis erat.</p> 
+              <h4>Mandles Candles</h4>
+              <p>Η Mandles Candles είναι μία ηθική και φιλική προς το περιβάλλον μικρή επιχείρηση με έδρα την Αθήνα. Δημιουργούμε χειροποίητα αρωματικά κεριά σόγιας από 100% vegan υλικά.</p> 
               <br>
-              <p>Donec fermentum tincidunt tellus quis fermentum. Proin eget imperdiet purus. Nulla facilisi. Aliquam tincidunt porttitor dui sed euismod. Duis est libero, rhoncus fermentum turpis id, tempus fringilla ipsum. Nullam venenatis tincidunt neque vel hendrerit. Suspendisse porta pretium porttitor.</p>
+              <p>Το όραμα μας είναι να προσφέρουμε ένα προιόν κατάλληλο για όλους(συμπεριλαμβανομένων μικρών παιδιών και κατοικιδίων) το οποίο θα κατακλύσει τον χώρο σας με όμορφα αρώματα.</p>
               <br>
-              <p>Sed purus quam, ultricies eu leo in, sollicitudin varius quam. Proin dictum urna ac diam fermentum tempus. Pellentesque urna urna, ullamcorper a tincidunt dignissim, venenatis in nisi. Vivamus in volutpat tellus. Etiam fermentum luctus posuere.</p>
+              <p>Σαν ομάδα αγαπάμε το περιβάλλον και στηρίζουμε την ανακύκλωση. Για αυτό το λόγο προσπαθούμε να ελαχιστοποιήσουμε τα αναλώσιμα και σας ωθούμε να επαναχρησιμοποιήσετε ή να μας επιστρέψετε με την επόμενη παραγγελία σας ότι δύναται να ξαναχρησιμοποιηθεί.</p>
               <br>
-              <p><a rel="nofollow" href="https://www.tooplate.com/view/2114-pixie">Pixie HTML Template</a> can be converted into your desired CMS theme. You can use this Bootstrap v4.1.3 layout for any online shop. Please tell your friends about <a rel="nofollow" href="https://www.facebook.com/tooplate/">Tooplate</a>. Thank you.</p>
+              <p>Θα χαρούμε πολύ να σας εξυπηρετήσουμε και να σας λύσουμε οποιαδήποτε απορία</p>
               <div class="share">
-                <h6>Find us on: <span><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-twitter"></i></a></span></h6>
+                <h6>Βρείτε μας στο: <span><a href="https://www.instagram.com/mandles_candles_/"><i class="fa fa-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -103,46 +100,6 @@ https://www.tooplate.com/view/2114-pixie
       </div>
     </div>
     <!-- About Page Ends Here -->
-
-    <!-- Subscribe Form Starts Here -->
-    <div class="subscribe-form">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <div class="line-dec"></div>
-              <h1>Subscribe on PIXIE now!</h1>
-            </div>
-          </div>
-          <div class="col-md-8 offset-md-2">
-            <div class="main-content">
-              <p>Godard four dollar toast prism, authentic heirloom raw denim messenger bag gochujang put a bird on it celiac readymade vice.</p>
-              <div class="container">
-                <form id="subscribe" action="" method="get">
-                  <div class="row">
-                    <div class="col-md-7">
-                      <fieldset>
-                        <input name="email" type="text" class="form-control" id="email" 
-                        onfocus="if(this.value == 'Your Email...') { this.value = ''; }" 
-                    	onBlur="if(this.value == '') { this.value = 'Your Email...';}"
-                    	value="Your Email..." required="">
-                      </fieldset>
-                    </div>
-                    <div class="col-md-5">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="button">Subscribe Now!</button>
-                      </fieldset>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Subscribe Form Ends Here -->
-
 
     
     <!-- Footer Starts Here -->
@@ -161,17 +118,13 @@ https://www.tooplate.com/view/2114-pixie
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md-12">
             <div class="social-icons">
               <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                <li><a href="https://www.instagram.com/mandles_candles_/"><i class="fa fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
@@ -187,8 +140,7 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="copyright-text">
-              <p>Copyright &copy; 2019 Company Name 
-                
+              <p>Copyright &copy; 2019 Company Name          
                 - Design: <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
             </div>
           </div>
