--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@ https://www.tooplate.com/view/2114-pixie
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/header-logo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -59,11 +54,7 @@ https://www.tooplate.com/view/2114-pixie
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
           </ul>
-        </div>
       </div>
     </nav>
 
@@ -101,17 +92,13 @@ https://www.tooplate.com/view/2114-pixie
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md-12">
             <div class="social-icons">
               <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                <li><a href="https://www.instagram.com/mandles_candles_/"><i class="fa fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
