--- a/products.html
+++ b/products.html
@@ -27,13 +27,13 @@ https://www.tooplate.com/view/2114-pixie
 
   <body>
     
-    
+
     <!-- Pre Header -->
     <div id="pre-header">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span>Suspendisse laoreet magna vel diam lobortis imperdiet</span>
+            <span>Mandles Candles</span>
           </div>
         </div>
       </div>
@@ -58,9 +58,6 @@ https://www.tooplate.com/view/2114-pixie
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -251,17 +248,13 @@ https://www.tooplate.com/view/2114-pixie
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md-12">
             <div class="social-icons">
               <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                <li><a href="https://www.instagram.com/mandles_candles_/"><i class="fa fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
