--- a/about.html
+++ b/about.html
@@ -27,37 +27,25 @@ https://www.tooplate.com/view/2114-pixie
   </head>
 
   <body>
-    
-    <!-- Pre Header -->
-    <div id="pre-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <span>Mandles Candles</span>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/header-logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">ΑΡΧΙΚΗ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="products.html">Products
+              <a class="nav-link" href="products.html">ΠΡΟΪΟΝΤΑ
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
               <span class="sr-only">(current)</span>
             </li>
           </ul>
@@ -78,7 +66,7 @@ https://www.tooplate.com/view/2114-pixie
           </div>
           <div class="col-md-6">
             <div class="left-image">
-              <img src="assets/images/about-us.jpg" alt="">
+              <img src="assets/images/banner-bg2.jpg" alt="">
             </div>
           </div>
           <div class="col-md-6">
@@ -111,23 +99,6 @@ https://www.tooplate.com/view/2114-pixie
               <img src="assets/images/header-logo.png" alt="">
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="footer-menu">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">How It Works ?</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="social-icons">
-              <ul>
-                <li><a href="https://www.instagram.com/mandles_candles_/"><i class="fa fa-instagram"></i></a></li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -140,8 +111,7 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="copyright-text">
-              <p>Copyright &copy; 2019 Company Name          
-                - Design: <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+              <p>Copyright &copy; 2021 Mandles Candles  
             </div>
           </div>
         </div>
