--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@ https://www.tooplate.com/view/2114-pixie
     
 
     <!-- Pre Header -->
-    <div id="pre-header">
+    <!-- <div id="pre-header">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -37,7 +37,7 @@ https://www.tooplate.com/view/2114-pixie
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
@@ -49,15 +49,15 @@ https://www.tooplate.com/view/2114-pixie
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">ΑΡΧΙΚΗ</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="products.html">Products
+              <a class="nav-link" href="products.html">ΠΡΟΪΟΝΤΑ
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
             </li>
           </ul>
         </div>
@@ -72,18 +72,18 @@ https://www.tooplate.com/view/2114-pixie
           <div class="col-md-4 col-sm-12">
             <div class="section-heading">
               <div class="line-dec"></div>
-              <h1>Featured Items</h1>
+              <h1>Επιλεγμένα Προϊόντα</h1>
             </div>
-          </div>
-          <div class="col-md-8 col-sm-12">
+          <!-- </div> -->
+          <!-- <div class="col-md-8 col-sm-12">
             <div id="filters" class="button-group">
-              <button class="btn btn-primary" data-filter="*">All Products</button>
-              <button class="btn btn-primary" data-filter=".new">Newest</button>
-              <button class="btn btn-primary" data-filter=".low">Low Price</button>
-              <button class="btn btn-primary" data-filter=".high">Hight Price</button>
+              <button class="btn btn-primary" data-filter="*">Όλα</button>
+              <button class="btn btn-primary" data-filter=".new">Νέα</button>
+              <button class="btn btn-primary" data-filter=".low">Φθίνουσα Τιμή</button>
+              <button class="btn btn-primary" data-filter=".high">Αύξουσα Τιμή</button>
             </div>
-          </div>
-        </div>
+          </div> -->
+        <!-- </div> -->
       </div>
     </div>
   
@@ -94,8 +94,8 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-01.jpg" alt="">
-                  <h4>Proin vel ligula</h4>
-                  <h6>$15.00</h6>
+                  <h4>Minimal Collection - Vanila</h4>
+                  <h6>€7.00</h6>
                 </div>
               </a>
             </div>
@@ -103,8 +103,8 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-02.jpg" alt="">
-                  <h4>Erat odio rhoncus</h4>
-                  <h6>$25.00</h6>
+                  <h4>Minimal Collection - Apple Pie </h4>
+                  <h6>€7.00</h6>
                 </div>
               </a>
             </div>
@@ -112,8 +112,8 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-03.jpg" alt="">
-                  <h4>Integer vel turpis</h4>
-                  <h6>$35.00</h6>
+                  <h4>Minimal Collection - Rosaline</h4>
+                  <h6>€7.00</h6>
                 </div>
               </a>
             </div>
@@ -121,8 +121,8 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-04.jpg" alt="">
-                  <h4>Sed purus quam</h4>
-                  <h6>$45.00</h6>
+                  <h4>Elegant Collection - Vanila</h4>
+                  <h6>€12.00</h6>
                 </div>
               </a>
             </div>
@@ -130,8 +130,8 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-05.jpg" alt="">
-                  <h4>Morbi aliquet</h4>
-                  <h6>$55.00</h6>
+                  <h4>Elegant Collection - Apple Pie</h4>
+                  <h6>€12.00</h6>
                 </div>
               </a>
             </div>
@@ -139,35 +139,35 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-06.jpg" alt="">
-                  <h4>Urna ac diam</h4>
-                  <h6>$65.00</h6>
+                  <h4>Elegant Collection - Rosaline</h4>
+                  <h6>€12.00</h6>
                 </div>
               </a>
             </div>
             <div id="7" class="item new high col-md-4">
               <a href="single-product.html">
                 <div class="featured-item">
-                  <img src="assets/images/product-03.jpg" alt="">
-                  <h4>Proin eget imperdiet</h4>
-                  <h6>$75.00</h6>
+                  <img src="assets/images/product-07.jpg" alt="">
+                  <h4>Barok Collection - Vanila</h4>
+                  <h6>€10.00</h6>
                 </div>
               </a>
             </div>
             <div id="8" class="item low new col-md-4">
               <a href="single-product.html">
                 <div class="featured-item">
-                  <img src="assets/images/product-02.jpg" alt="">
-                  <h4>Nullam risus nisl</h4>
-                  <h6>$85.00</h6>
+                  <img src="assets/images/product-08.jpg" alt="">
+                  <h4>Barok Collection - Apple Pie</h4>
+                  <h6>€10.00</h6>
                 </div>
               </a>
             </div>
             <div id="9" class="item new col-md-4">
               <a href="single-product.html">
                 <div class="featured-item">
-                  <img src="assets/images/product-01.jpg" alt="">
-                  <h4>Cras tempus</h4>
-                  <h6>$95.00</h6>
+                  <img src="assets/images/product-09.jpg" alt="">
+                  <h4>Barok Collection - Rosaline</h4>
+                  <h6>€10.00</h6>
                 </div>
               </a>
             </div>
@@ -199,23 +199,6 @@ https://www.tooplate.com/view/2114-pixie
               <img src="assets/images/header-logo.png" alt="">
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="footer-menu">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">How It Works ?</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="social-icons">
-              <ul>
-                <li><a href="https://www.instagram.com/mandles_candles_/"><i class="fa fa-instagram"></i></a></li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -228,9 +211,7 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="copyright-text">
-              <p>Copyright &copy; 2019 Company Name 
-                
-                - Design: <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+              <p>Copyright &copy; 2021 Mandles Candles
             </div>
           </div>
         </div>
