--- a/products.html
+++ b/products.html
@@ -94,13 +94,13 @@ https://www.tooplate.com/view/2114-pixie
               <a href="single-product.html">
                 <div class="featured-item">
                   <img src="assets/images/product-01.jpg" alt="">
-                  <h4>Minimal Collection - Vanila</h4>
+                  <h4>Minimal Collection - All Time Classic Vanila</h4>
                   <h6>€7.00</h6>
                 </div>
               </a>
             </div>
             <div id="2" class="item high col-md-4">
-              <a href="single-product.html">
+              <a href="single-product2.html">
                 <div class="featured-item">
                   <img src="assets/images/product-02.jpg" alt="">
                   <h4>Minimal Collection - Apple Pie </h4>
