--- a/single-product2.html
+++ b/single-product2.html
@@ -61,7 +61,7 @@ https://www.tooplate.com/view/2114-pixie
           <div class="col-md-12">
             <div class="section-heading">
               <div class="line-dec"></div>
-              <h1>All Time Clasic Vanila</h1>
+              <h1>Apple Pie</h1>
             </div>
           </div>
           <div class="col-md-6">
@@ -69,7 +69,7 @@ https://www.tooplate.com/view/2114-pixie
               <div id="slider" class="flexslider">
                 <ul class="slides">
                   <li>
-                    <img src="assets/images/product-01.jpg" />
+                    <img src="assets/images/product-02.jpg" />
                   </li>
                   <li>
                     <img src="assets/images/big-02.jpg" />
@@ -104,9 +104,9 @@ https://www.tooplate.com/view/2114-pixie
           </div>
           <div class="col-md-6">
             <div class="right-content">
-              <h4>Minimal Collection - All Time Clasic Vanila</h4>
+              <h4>Minimal Collection - Apple Pie</h4>
               <h6>€7.00</h6>
-              <p>Το αρωματικό κερί της Minimal συλλογής μας, All Time Clasic Vanila με άρωμα βανίλια είναι κατάλληλο τόσο για εσωτερικούς όσο και για εξωτερικούς χώρους. Το πλούσιο άρωμα του αναδύεται στον χώρο δημιουργώντας μια πολύ όμορφη ατμόσφαιρα.</p>
+              <p>Το αρωματικό κερί της Minimal συλλογής μας, Apple Pie με άρωμα μήλο και κανέλα είναι κατάλληλο τόσο για εσωτερικούς όσο και για εξωτερικούς χώρους. Το πλούσιο άρωμα του αναδύεται στον χώρο δημιουργώντας μια πολύ όμορφη ατμόσφαιρα.</p>
               </div>
             </div>
           </div>
