--- a/products.html
+++ b/products.html
@@ -109,7 +109,7 @@ https://www.tooplate.com/view/2114-pixie
               </a>
             </div>
             <div id="3" class="item low col-md-4">
-              <a href="single-product.html">
+              <a href="single-product3.html">
                 <div class="featured-item">
                   <img src="assets/images/product-03.jpg" alt="">
                   <h4>Minimal Collection - Rosaline</h4>
@@ -118,7 +118,7 @@ https://www.tooplate.com/view/2114-pixie
               </a>
             </div>
             <div id="4" class="item low col-md-4">
-              <a href="single-product.html">
+              <a href="single-product4.html">
                 <div class="featured-item">
                   <img src="assets/images/product-04.jpg" alt="">
                   <h4>Elegant Collection - Vanila</h4>
