--- a/single-product9.html
+++ b/single-product9.html
@@ -61,7 +61,7 @@ https://www.tooplate.com/view/2114-pixie
           <div class="col-md-12">
             <div class="section-heading">
               <div class="line-dec"></div>
-              <h1>Apple Pie</h1>
+              <h1>Rosaline</h1>
             </div>
           </div>
           <div class="col-md-6">
@@ -69,7 +69,7 @@ https://www.tooplate.com/view/2114-pixie
               <div id="slider" class="flexslider">
                 <ul class="slides">
                   <li>
-                    <img src="assets/images/product-05.jpg" />
+                    <img src="assets/images/product-09.jpg" />
                   </li>
                   <li>
                     <img src="assets/images/big-02.jpg" />
@@ -104,9 +104,9 @@ https://www.tooplate.com/view/2114-pixie
           </div>
           <div class="col-md-6">
             <div class="right-content">
-              <h4>Elegant Collection - Apple Pie</h4>
-              <h6>€12.00</h6>
-              <p>Το αρωματικό κερί της Elegant συλλογής μας, Apple Pie με άρωμα μήλο και κανέλα είναι κατάλληλο τόσο για εσωτερικούς όσο και για εξωτερικούς χώρους. Το πλούσιο άρωμα του αναδύεται στον χώρο δημιουργώντας μια πολύ όμορφη ατμόσφαιρα.</p>
+              <h4>Barok Collection - Rosaline</h4>
+              <h6>€10.00</h6>
+              <p>Το αρωματικό κερί της Barok συλλογής μας, Rosaline με άρωμα φρεσκοκομμένο τριαντάφυλλο είναι κατάλληλο τόσο για εσωτερικούς όσο και για εξωτερικούς χώρους. Το πλούσιο άρωμα του αναδύεται στον χώρο δημιουργώντας μια πολύ όμορφη ατμόσφαιρα.</p>
               </div>
             </div>
           </div>
