--- a/single-product2.html
+++ b/single-product2.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-    <title>Pixie - Product Detail</title>
+    <title>Mandles Candles </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -114,7 +114,7 @@ https://www.tooplate.com/view/2114-pixie
       </div>
     </div>
     <!-- Single Page Ends Here -->
-      
+
     <!-- Footer Starts Here -->
     <div class="footer">
       <div class="container">
